--- a/package.json
+++ b/package.json
@@ -7,8 +7,22 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "fastest-validator": "^1.11.1",
+    "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "~1.9.1",
+    "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.3",
+    "path": "^0.12.7",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
