--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "fastest-validator": "^1.11.1",
     "handlebars": "^4.7.7",
+    "haversine": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.0",
