UPDATE SMTP USER LOGIN

--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ DB_USERNAME= root
 DB_PASSWORD=
 DB_HOSTNAME= 127.0.0.1
 
-FROM_EMAIL = noreply@todolist.com
-SMTP_USERNAME= kelvinding738@gmail.com
-SMTP_PASSWORD= GyAR8tMrscbfqh6Y
-SMTP_SERVER= smtp-relay.sendinblue.com
+FROM_EMAIL=noreply@IPE-5.com
+SMTP_USERNAME=k3lvinding@gmail.com
+SMTP_PASSWORD=pLOrZEPXg3Sdt8I6
+SMTP_SERVER=smtp-relay.sendinblue.com
 SMTP_PORT=587
-FRONT_END_URL_FORGOT_PASSWORD= test.com
+FRONT_END_URL_FORGOT_PASSWORD= attendance-apps.vercel.app/forgot-password/reset-password
 
 JWT_SECRET=todolist123
 JWT_SECRET_REMEMBER_TOKEN=remembertoken123
